syntax = "proto3";

option java_multiple_files = true;
option java_package = "currency.ds.agh";
option java_outer_classname = "CurrencyProto";
option objc_class_prefix = "CUR";


service CurrencyService {
    rpc getExchangeRates (Currencies) returns (stream ExchangeRate) {
    }
}

message Currencies {
    repeated CurrencyType currency = 1;
}

enum CurrencyType {
    EUR = 0;
    GBP = 1;
    USD = 2;
    CHF = 3;
    PLN = 4;
}

message ExchangeRate {
    CurrencyType currency = 1;
    double rate = 2;
}
